@@ -327,7 +327,10 @@ get_label (PlannerView *view)
 {
 	g_return_val_if_fail (PLANNER_IS_VIEW (view), NULL);
 
-	return _("Gantt Chart");
+	/* i18n: Label used for the sidebar. Please try to make it short and use
+	 * a linebreak if necessary/possible.
+	 */
+	return _("Gantt");
 }
 
 G_MODULE_EXPORT const gchar *
