@@ -1,3 +1,7 @@
+2005-03-20  Richard Hult  <richard@imendio.com>
+
+	* sv.po: Update.
+
 2005-03-18  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Hungarian translation updated.
